welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: not a legal formal parameter
if ( (a<=19 || a=>13) || (b<=19 || b=>13) || (c<=19 || c=>13) ) {
            ^hasTeen:2: error: not a legal formal parameter
if ( (a<=19 || a=>13) || (b<=19 || b=>13) || (c<=19 || c=>13) ) {
                                ^hasTeen:2: error: not a legal formal parameter
if ( (a<=19 || a=>13) || (b<=19 || b=>13) || (c<=19 || c=>13) ) {
                                                    ^